# lean-vla

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: README.md  action_block_assessment.md  attack_reproduction_evidence_audit.md  benchmark_gpu.md  current_experiment.md  e0_support_audit.md  e1_clean_pilot.md  e3_postdispatch_intervention.md  e3_safety_evaluation.md  evaluation_results.md  experiment_reuse.md  experiments.md  failure_lessons.md  gpu_handoff_20260713.md  implementation_and_experiment_readiness.md  implementation_notes.md  lean_effectiveness_comparison_20260703.md  lean_libero_macro_chunk_plan.md  lean_method_upgrade_20260710.md  lean_spec_design.md  libero_safety_integration.md  main_experiment_plan.md  method.md  next_agent_prompt_20260715.md  next_experiment_prompt.md  optimization_plan.md  paper_story.md  progress_and_plan.md  project_status.md  related_work.md  remote_execution.md  reproduction_plan.md  roadmap.md  saber_lora_official_eval_report_20260708.md  safe_fiper_r0_runbook.md  semantic_subtask_hierarchy.md  semantic_subtask_pilot.md  system_architecture.md  trusted_semantic_boundary.md
experiments/: __init__.py  action_envelope_failure_taxonomy.json  action_envelope_paper_tables.json  attack_reproduction_evidence_audit_20260717.json  ctda_fallback_affordance_task2_init0.json  ctda_v2_aegis_cbf_filter_protocol.json  ctda_v2_aegis_cbf_filter_summary.json  ctda_v2_aegis_cbf_geometry_protocol.json  ctda_v2_aegis_cbf_geometry_summary.json  ctda_v2_crypto_evidence_protocol.json  ctda_v2_crypto_evidence_summary.json  ctda_v2_no_dispatch_adapter_protocol.json  ctda_v2_no_dispatch_adapter_summary.json  ctda_v2_no_dispatch_protocol.json  ctda_v2_open_region_coverage_protocol.json  ctda_v2_open_region_coverage_protocol_r1.json  (+114 more)
(+592 files in other folders)
